[Fix] Fix padding on mobile

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
 @media screen and (min-width: 768px) {
     body {
         font-size: 3rem; /* Larger size for desktop */
+        padding: 1.5rem 1.5rem 1.5rem 1.5rem;
     }
 }
 
